# simple_chat_test

./: README.md  pyproject.toml
simple_chat/simple_chat/: settings.py  urls.py
simple_chat/threads/: admin.py  models.py  serializers.py  urls.py  views.py
simple_chat/threads/fixtures/: messages_test.json  threads_test.json
simple_chat/users/: views.py
simple_chat/users/fixtures/: users_test.json
